modified probability notebook

--- a/R/probabilitiesAndEntropyNHL.ipynb
+++ b/R/probabilitiesAndEntropyNHL.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -69,15 +69,22 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The raw data of summed and subtracted data for every game is now filtered to break it up into data for every team."
+    "The input data consists of data with postfix Delta and Sum, with Sum data defined as $X_{\\Delta}=X_{h}-X_{a}$ with $X_{h,a} \\in X \\in \\mathbb{D}^{d}$ and $X_{\\Sigma}=X_{h}+X_{a}$ with $X_{h,a} \\in \\mathbb{D}^{d}$ ($\\mathbb{D}$ a mixture of binary and natural numbers), d dimensional home and away team statistics vectors. In our case every datasample has 16 entries,with 10 numerical attributes per dataset, giving d=10. The first 6 attributes of each dataset like season, game id and teams who played contain supplementery information and are important only in the preprocessing process. We may write our dataset as \"set\" $X_{\\Delta,Sum} = F ( x_{won},x_{score},x_{shots},x_{faceoff},x_{takeaway},x_{giveaway},x_{pim},x_{hits},x_{ppg},x_{attendance} )$ with F a function of the datasets for home and away teams, as described above. $x_{won}$ takes binary values $x_{won} \\in [0,1]$, 0 for loss and 1 for game won. The other attributes take integer values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The datavectors $X_{Sum},X_{\\Delta}$ are now combined to give individual teams statistics. For home games we can simply add the two $X_{team,h}={1 \\over 2} \\{ X_{Sum} + X_{\\Delta} \\}$, for the away team stats we have to invert $X_{\\Delta}$: $X_{team,a}={1 \\over 2} \\{ X_{Sum} - X_{\\Delta} \\}$, and finally add the two: $X_{team}=X_{team,h}+X_{team,a}$ to obtain the overall game stats. We are doing this for all the teams contained in the statistics, which are the following:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -104,11 +111,299 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "getTeamGameStatistics <- function(thisTeam)\n",
+    "    {\n",
+    "    matchS<-subset(nhlDataSum,nhlDataSum$TEAM1==thisTeam | nhlDataSum$TEAM2==thisTeam)\n",
+    "    matchH<-subset(nhlDataDelta,nhlDataDelta$TEAM1==thisTeam)\n",
+    "    matchA<-subset(nhlDataDelta,nhlDataDelta$TEAM2==thisTeam)\n",
+    "    \n",
+    "    #invert away data\n",
+    "    matchA$SCORE=-matchA$SCORE\n",
+    "    matchA$SHOTS=-matchA$SHOTS\n",
+    "    matchA$FACEOFF=-matchA$FACEOFF\n",
+    "    matchA$TAKEAWAY=-matchA$TAKEAWAY\n",
+    "    matchA$GIVEAWAY=-matchA$GIVEAWAY\n",
+    "    matchA$PIM=-matchA$PIM\n",
+    "    matchA$HITS=-matchA$HITS\n",
+    "    matchA$PPG=-matchA$PPG\n",
+    "\n",
+    "    #add delta data\n",
+    "    matchD<-rbind(matchH,matchA)\n",
+    "    #now order for data then season\n",
+    "    tmp<-matchD[order(matchD$DATE),]\n",
+    "    matchDOrdered<-tmp[order(tmp$SEASON),]\n",
+    "\n",
+    "    #compute the NYI values by combining delta and summed data\n",
+    "    teamData=0.5*(matchDOrdered[,sapply(matchDOrdered,is.numeric)]+matchS[,sapply(matchS,is.numeric)])\n",
+    "    return(teamData)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Have retrieved a data list of size 30 for  30 teams\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "teamsDataList <- list()\n",
+    "for(i in 1:length(LISTOFTEAMS))\n",
+    "{\n",
+    "team=LISTOFTEAMS[i]\n",
+    "teamsDataList[[i]] <- getTeamGameStatistics(team)\n",
+    "}\n",
+    "print(paste(\"Have retrieved a data list of size\",length(teamsDataList),\"for \",length(LISTOFTEAMS),\"teams\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We retrieve data from the summed and the delta dataset, which combined contain the whole game information for every team. In our analysis we look at wins, the difference in shots, difference in faceoffs won, the summed shots and summed faceoffs in the game. To simplify the analysis, we combine the data into one common matrix."
+    "In the first step we coarse grain the data. One reason for this is to make the computational feat of multidimensional probability function estimation more feasible. The second is that the phase space volume is so vast and data scattered so sparsly, that an agglomeration into more coarse categories may not do harm in reducing the information content. The coarse graining is determined by one parameter only, the number of parts in which every data column is subdivided."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "coarseGraining <- function(dataMatrix,parts)\n",
+    "{\n",
+    "  #coarse graining of input data.matrix\n",
+    "  grainedMatrix = matrix(nrow=nrow(dataMatrix),ncol=ncol(dataMatrix))\n",
+    "  centroidMatrix = matrix(nrow=parts,ncol=ncol(dataMatrix))\n",
+    "  for(j in 1:ncol(dataMatrix))\n",
+    "  {\n",
+    "    colVals=dataMatrix[,j]\n",
+    "    coarsedGrainedColData=c()\n",
+    "    maxV=max(colVals)\n",
+    "    minV=min(colVals)\n",
+    "    delta=(maxV-minV)/parts\n",
+    "    centroidV=minV+0:(parts-1)*delta+delta/2\n",
+    "    for(jj in 1:length(colVals))\n",
+    "      {\n",
+    "        #get the index of nearest element of column Values in centroidVector\n",
+    "      actualVal<-colVals[jj]\n",
+    "      coarsedGrainedColData[jj]=centroidV[which.min(abs(centroidV-colVals[jj]))]\n",
+    "    }\n",
+    "    #now add data to matrix\n",
+    "    grainedMatrix[,j] <- coarsedGrainedColData\n",
+    "    centroidMatrix[,j] <- centroidV\n",
+    "  }#next matrix column\n",
+    "  \n",
+    "    #return the coarse grained data matrix and centroid vectors\n",
+    "  return(list(\"coarseGrainedMatrix\"=grainedMatrix,\"centroidVectors\"=centroidMatrix))\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"We analyze 1223 games characterized by 7 attributes.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "nhlDataMatrix=as.matrix(cbind(nhlDataDelta$SHOTS,nhlDataDelta$FACEOFF,nhlDataDelta$HITS,nhlDataDelta$TAKEAWAY,nhlDataDelta$GIVEAWAY,nhlDataDelta$PIM,nhlDataDelta$PPG))\n",
+    "print(paste(\"We analyze\",nrow(matchNYIMatrix),\"games characterized by\",ncol(matchNYIMatrix),\"attributes.\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "returnVal=coarseGraining(nhlDataMatrix,4)\n",
+    "McoarseGrained=returnVal$coarseGrainedMatrix\n",
+    "centroidVectors=returnVal$centroidVectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "  fetchDataColumnsAsMatrix <- function(dataFrame)\n",
+    "  {\n",
+    "    #input dataframe\n",
+    "    #output matrix of certain columns of dataframe, fixed in function\n",
+    "    \n",
+    "    return(as.matrix(cbind(dataFrame$SHOTS,dataFrame$FACEOFF,dataFrame$TAKEAWAY,dataFrame$PIM,dataFrame$PPG)))\n",
+    "    \n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Now we write a function to coarse grain data according to a precomputed coarse grain matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "coarseGrainingGrainMatrix <- function(matrixToGrain,centroidVectors)\n",
+    "{\n",
+    "  #categorize input data in matrix grainMatrix according to centroids set in centroidVectors\n",
+    "  #return matrix with values from centroidVectors\n",
+    "  if(is.vector(matrixToGrain))\n",
+    "  {\n",
+    "    matrixToGrain <- as.matrix(matrixToGrain)\n",
+    "    if(ncol(matrixToGrain)<nrow(matrixToGrain))\n",
+    "      {\n",
+    "      matrixToGrain <- t(matrixToGrain)\n",
+    "      }\n",
+    "    #grainedMatrix=as.matrix(matrixToGrain)\n",
+    "  #  grainedMatrix = matrix(nrow=1,ncol=length(matrixToGrain))\n",
+    "  }\n",
+    "  #else\n",
+    "  #{\n",
+    "  grainedMatrix = matrix(nrow=nrow(matrixToGrain),ncol=ncol(matrixToGrain))\n",
+    "  #}\n",
+    "  for(j in 1:ncol(matrixToGrain))\n",
+    "  { \n",
+    "    centroidV=centroidVectors[,j]\n",
+    "    colVals=matrixToGrain[,j]\n",
+    "    coarsedGrainedColData=c()\n",
+    "    for(jj in 1:length(colVals))\n",
+    "    {\n",
+    "      #get the index of nearest element of column Values in centroidVector\n",
+    "      actualVal<-colVals[jj]\n",
+    "      coarsedGrainedColData[jj] <- centroidV[which.min(abs(centroidV-actualVal))]\n",
+    "    } \n",
+    "    #now add data to matrix\n",
+    "    grainedMatrix[,j] <- coarsedGrainedColData\n",
+    "  }\n",
+    "  return(grainedMatrix)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the next step we define a simple multivariate probabilit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n",
+      "[1] NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "EvaluesV=c()\n",
+    "  for(team in LISTOFTEAMS)\n",
+    "  {\n",
+    "    matchNYIDH<-subset(nhlDataDelta,nhlDataDelta$TEAM1==team)\n",
+    "    matchDataNYIMatrix<-fetchDataColumnsAsMatrix(matchNYIDH)\n",
+    "    grainedMatchDataNYIMatrix<-coarseGrainingGrainMatrix(matchDataNYIMatrix,centroidVectors)\n",
+    "    Entropy<-getEntropy(McoarseGrained,centroidVectors,grainedMatchDataNYIMatrix)\n",
+    "    #compute average entropy per game\n",
+    "    Entropy<-Entropy/nrow(matchDataNYIMatrix)\n",
+    "    print(Entropy)\n",
+    "    EvaluesV <- c(EvaluesV,Entropy)\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
