--- a/R/classificationNHLData.ipynb
+++ b/R/classificationNHLData.ipynb
@@ -965,7 +965,8 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
